--- a/css/estilos.css
+++ b/css/estilos.css
@@ -80,6 +80,108 @@ body {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
+
+.btn{
+  color: white;
+  background: var(--primary-color);
+  cursor: pointer;
+  border-radius: 5px;
+  font-size: 12px;
+  padding: 5px 12px;
+}
+
+.conversor-imagen{
+  width: 150px;
+}
+.moneda{
+  padding: 40px 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.moneda select{
+  padding: 10px 20px 10px 10px;
+  border: 1px solid #dedede;
+  font-size: 16px;
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  appearance: none;
+}
+
+.moneda input {
+  border: 0;
+  font-size: 30px;
+  text-align: right;
+}
+
+.taza-cambio-container{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.cambio{
+  color: var(--primary-color);
+  font-size: 14px;
+  padding: 0 10px;
+  font-weight: 600;
+}
+
+select:focus, input:focus, button:focus{
+  outline: 0;
+}
+
+@media (max-width:600px) {
+  .moneda input{
+      width: 200px;
+  }
+  
+}
+
+main {
+  max-width: 250px;
+  margin: 100px auto;
+}
+
+.coin-container {
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: 25px;
+}
+
+.coin {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 5px 5px 5px 0;
+}
+
+.bitcoin-item {
+  background-color: #58BC82;
+}
+
+.dollar-item {
+  opacity: 0;
+  background-color: #E34A6F;
+  animation-duration: .5s;
+  animation-fill-mode: forwards;
+  animation-name: opacity;
+}
+
+@keyframes opacity {
+  from {
+    opacity: 0;
+  }
+
+  to {
+      opacity: 1;
+  }
+}
+
 .divisa,
 .login {
   max-width:  280px;
